[package]
name = "colette-repository"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
colette-core.workspace = true
colette-query.workspace = true
deadpool-postgres.workspace = true
sea-query.workspace = true
sea-query-postgres = { version = "0.5.0", default-features = false, features = [
  "with-chrono",
  "with-json",
  "with-uuid",
] }
serde.workspace = true
serde_json.workspace = true
tokio-postgres.workspace = true
url.workspace = true
uuid.workspace = true
