[package]
name = "colette-repository"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
colette-core.workspace = true
colette-handler.workspace = true
email_address.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
url.workspace = true
uuid.workspace = true
