[package]
name = "colette-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
bytes.workspace = true
chrono.workspace = true
colette-feed.workspace = true
colette-meta.workspace = true
dyn-clone.workspace = true
http.workspace = true
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }
scraper.workspace = true
thiserror.workspace = true
url.workspace = true
