[package]
name = "colette-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
axum.workspace = true
axum-embed = { version = "0.1", default-features = false }
colette-api.workspace = true
colette-backup.workspace = true
colette-config.workspace = true
colette-core.workspace = true
colette-migrations.workspace = true
colette-password.workspace = true
colette-plugins.workspace = true
colette-scraper.workspace = true
colette-session.workspace = true
colette-sql.workspace = true
colette-tasks.workspace = true
rust-embed = { version = "8", default-features = false, features = [
  "interpolate-folder-path",
] }
sea-orm.workspace = true
tokio.workspace = true
tower-sessions.workspace = true
