[package]
name = "colette-session"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
redis.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-sessions-core = { version = "0.14.0", default-features = false }
