[package]
name = "colette-sql"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
colette-core.workspace = true
colette-entities.workspace = true
colette-migrations.workspace = true
futures.workspace = true
sea-orm.workspace = true
serde.workspace = true
uuid.workspace = true
