[package]
name = "colette-sql"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
colette-core.workspace = true
colette-netscape.workspace = true
colette-opml.workspace = true
futures.workspace = true
sea-query.workspace = true
sea-query-binder = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
thiserror.workspace = true
uuid.workspace = true
worker = { workspace = true, optional = true }

[features]
default = ["postgres"]
postgres = ["sqlx", "sqlx/postgres"]
sqlite = ["sqlx", "sqlx/sqlite"]
cloudflare = ["dep:serde", "dep:serde_json", "dep:worker", "worker/d1"]
sqlx = ["dep:sqlx", "dep:sea-query-binder"]
