[package]
name = "colette-sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
colette-core.workspace = true
colette-netscape.workspace = true
colette-opml.workspace = true
colette-sql.workspace = true
deadpool-sqlite.workspace = true
futures.workspace = true
refinery = { workspace = true, features = ["rusqlite"] }
rusqlite.workspace = true
sea-query = { workspace = true, features = ["backend-sqlite"] }
sea-query-rusqlite = { version = "=0.7.0-rc.1", default-features = false, features = [
  "with-chrono",
  "with-json",
  "with-uuid",
] }
serde_json.workspace = true
tower-sessions-core.workspace = true
uuid.workspace = true
