[package]
name = "colette-sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
colette-core.workspace = true
colette-netscape.workspace = true
colette-opml.workspace = true
colette-sql.workspace = true
futures.workspace = true
sea-query = { workspace = true, features = ["backend-sqlite"] }
sea-query-binder = { workspace = true, features = ["sqlx-sqlite"] }
sqlx = { workspace = true, features = ["sqlite"] }
serde_json.workspace = true
tower-sessions-core.workspace = true
uuid.workspace = true
