[package]
name = "colette-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
futures.workspace = true
rust-s3 = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[features]
default = ["fs"]
fs = ["dep:tokio", "tokio/fs"]
s3 = ["dep:rust-s3"]
