[package]
name = "colette-task"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono.workspace = true
colette-core.workspace = true
cron = { version = "0.12", default-features = false }
futures.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
url.workspace = true
