[package]
name = "colette-task"
version = "0.1.0"
edition = "2021"

[dependencies]
apalis.workspace = true
apalis-redis.workspace = true
chrono.workspace = true
colette-core.workspace = true
futures.workspace = true
redis.workspace = true
serde.workspace = true
tokio.workspace = true
url.workspace = true
