[package]
name = "colette-task"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
apalis.workspace = true
apalis-core = { version = "0.6.4", default-features = false }
async-trait.workspace = true
chrono.workspace = true
colette-archiver.workspace = true
colette-core.workspace = true
futures.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
