[package]
name = "colette-util"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { version = "0.22.1", default-features = false }
chrono.workspace = true
hex = { version = "0.4.3", default-features = false }
password-auth = { version = "1.0.0", default-features = false, features = [
  "argon2",
] }
serde.workspace = true
serde_json.workspace = true
sha2 = { version = "0.10.8", default-features = false }
thiserror.workspace = true
url.workspace = true
