[package]
name = "colette-util"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", default-features = false, features = [
  "password-hash",
  "std",
] }
base64 = { version = "0.22.1", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
rand = { version = "0.9.0", default-features = false, features = [
  "thread_rng",
] }
sha2 = { version = "0.10.8", default-features = false }
thiserror.workspace = true
