[package]
name = "colette-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
base64 = { version = "0.22", default-features = false }
password-auth = { version = "1", default-features = false, features = [
  "argon2",
] }
serde.workspace = true
serde_json = { version = "1", default-features = false }
